--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -9,8 +9,8 @@
             {port, {{alum_web_port}} }
         ]},
         %% API config
-        {http_web, [
-            {ip,  "{{alum_api_ip}}" },
+        {http_api, [
+            %% {ip,  "{{alum_api_ip}}" },
             {port, {{alum_api_port}} }
         ]}
     ]},
